git-svn-id: https://code.vis.ethz.ch/svn/nicausalai/packages/CompareCausalNetworks@679 a1c88af4-34b9-405c-8f8d-2e728b2986e8

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,2 +1,2 @@
 import(InvariantCausalPrediction,pcalg,CAM,igraph, backShift)
-export(getParents, getParentsStable,plotGraph)
+export(getParents, getParentsStable)
