--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,2 +1,2 @@
-import(InvariantCausalPrediction,pcalg,CAM,igraph, backShift)
+import(InvariantCausalPrediction,pcalg,CAM,igraph, backShift, Matrix, glmnet)
 export(getParents, getParentsStable)
