--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,17 +2,18 @@ Package: CompareCausalNetworks
 Type: Package
 Title: Interface to Diverse Estimation Methods of Causal Networks
 Version: 0.1.0
-Date: 2015-06-17
+Date: 2015-06-22
 Author: Nicolai Meinshausen <meinshausen@stat.math.ethz.ch>, 
  Christina Heinze <heinze@stat.math.ethz.ch>
 Depends: R (>= 3.1.0)
-Imports: InvariantCausalPrediction, pcalg, CAM, igraph, 
- backShift, Matrix, glmnet, kernlab, mgcv
-Maintainer: Christina Heinze <heinze@stat.math.ethz.ch>, 
- Nicolai Meinshausen <meinshausen@stat.math.ethz.ch>
+Imports: Matrix
+Maintainer: Christina Heinze <heinze@stat.math.ethz.ch>
 Description: Unified interface for the estimation of causal networks, 
  including the methods GES, GIES, regression, PC, Lingam, RFCI, 
  invariant prediction (ICP) and backShift.
 License: GPL
 LazyData: true
-Suggests: testthat
+Suggests: pcalg, InvariantCausalPrediction, glmnet, backShift, CAM, kernlab, 
+  mgcv, testthat
+URL: https://github.com/christinaheinze/CompareCausalNetworks
+BugReports: https://github.com/christinaheinze/CompareCausalNetworks/issues
