--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,28 +1,36 @@
 Package: CompareCausalNetworks
 Type: Package
 Title: Interface to Diverse Estimation Methods of Causal Networks
-Version: 0.1.2
-Date: 2015-09-29
-Author: Christina Heinze <heinze@stat.math.ethz.ch>,
-  Nicolai Meinshausen <meinshausen@stat.math.ethz.ch>
-Depends: R (>= 3.1.0)
-Imports: Matrix
-Maintainer: Christina Heinze <heinze@stat.math.ethz.ch>
-Description: Unified interface for the estimation of causal networks, 
- including the methods 'backShift' (from package 'backShift'), 
- 'bivariateANM' (bivariate additive noise model), 
- 'bivariateCAM' (bivariate causal additive model), 
- 'CAM' (causal additive model) (from package 'CAM'), 
- 'hiddenICP' (invariant causal prediction with hidden variables), 
- 'ICP' (invariant causal prediction) (from package 'InvariantCausalPrediction'), 
- 'GES' (greedy equivalence search), 
- 'GIES' (greedy interventional equivalence search), 
- 'LINGAM', 'PC' (PC Algorithm), 
- 'RFCI' (really fast causal inference)
- (all from package 'pcalg') and regression.
+Version: 0.1.5
+Date: 2016-11-25
+Author: Christina Heinze-Deml <heinzedeml@stat.math.ethz.ch>,
+    Nicolai Meinshausen <meinshausen@stat.math.ethz.ch>
+Depends:
+    R (>= 3.1.0)
+Imports:
+    Matrix,
+    methods
+Maintainer: Christina Heinze-Deml <heinzedeml@stat.math.ethz.ch>
+Description: Unified interface for the estimation of causal networks, including
+    the methods 'backShift' (from package 'backShift'), 'bivariateANM' (bivariate
+    additive noise model), 'bivariateCAM' (bivariate causal additive model),
+    'CAM' (causal additive model) (from package 'CAM'), 'hiddenICP' (invariant
+    causal prediction with hidden variables), 'ICP' (invariant causal prediction)
+    (from package 'InvariantCausalPrediction'), 'GES' (greedy equivalence
+    search), 'GIES' (greedy interventional equivalence search), 'LINGAM', 'PC' (PC
+    Algorithm), 'RFCI' (really fast causal inference) (all from package 'pcalg') and
+    regression.
 License: GPL
 LazyData: true
-Suggests: pcalg, InvariantCausalPrediction, glmnet, backShift, CAM, kernlab, 
-  mgcv, testthat
+Suggests:
+    pcalg,
+    InvariantCausalPrediction,
+    glmnet,
+    backShift,
+    CAM,
+    kernlab,
+    mgcv,
+    testthat
 URL: https://github.com/christinaheinze/CompareCausalNetworks
 BugReports: https://github.com/christinaheinze/CompareCausalNetworks/issues
+RoxygenNote: 5.0.1
