--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,4 @@ importFrom("methods", "as", "new")
 importFrom("stats", "coef", "cor", "dist", "formula", "median",
              "pgamma", "qgamma", "rnorm", "runif", "var")
 importFrom("utils", "packageVersion")
-export(getParents, getParentsStable)
+export(getParents, getParentsStable, simulateInterventions)
