--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,7 @@
 import(Matrix)
+importFrom("expm", "%^%")
 importFrom("methods", "as", "new")
 importFrom("stats", "coef", "cor", "dist", "formula", "median",
              "pgamma", "qgamma", "rnorm", "runif", "var")
 importFrom("utils", "packageVersion")
-export(getParents, getParentsStable, simulateInterventions)
+export(getParents, getParentsStable, simulateInterventions, getRanking)
