--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,4 @@ importFrom("stats", "coef", "cor", "dist", "formula", "median",
              "pgamma", "qgamma", "rnorm", "runif", "var")
 importFrom("utils", "packageVersion")
 export(getParents, getParentsStable, simulateInterventions, 
-       getRanking, evaluateRanking)
+       getRanking, evaluateRanking, ROCdfAllMethods)
