--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: CompareCausalNetworks
 Type: Package
 Title: Interface to Diverse Estimation Methods of Causal Networks
-Version: 0.2.0
-Date: 2019-04-16
+Version: 0.2.1
+Date: 2019-05-02
 Author: Christina Heinze-Deml <heinzedeml@stat.math.ethz.ch>,
     Nicolai Meinshausen <meinshausen@stat.math.ethz.ch>
 Depends:
@@ -33,6 +33,7 @@ Suggests:
     CAM,
     kernlab,
     mgcv,
+    mboost,
     bnlearn,
     testthat,
     huge,
