--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ importFrom("methods", "as", "new")
 importFrom("stats", "coef", "cov", "cor", "dist", "formula", "median",
             "pgamma", "qgamma", "rnorm", "runif", "var", 
             "rbinom", "qt", "rt", "pnorm", "aggregate", "sd")
+importFrom("stats", "lm", "predict")
 export(getParents, getParentsStable, simulateInterventions, 
        getRanking)
